[project]
name = "qgis-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "shortuuid>=1.0.13",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
